--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "scripts": {
-    "start": "node ./packages/fbinstant-tictactoe-server/index.js",
+    "start": "node ./packages/fbinstant-tictactoe-server/index.js"
   },
   "devDependencies": {
     "lerna": "^2.4.0"
