--- a/packages/fbinstant-tictactoe-server/.env
+++ b/packages/fbinstant-tictactoe-server/.env
@@ -9,7 +9,8 @@ DATABASE_URL=postgres://dwlvlpddkzgrmb:f6113ca95c3e25007f0e080effb721ebe08a5fcf1
 BOT_VERIFY_TOKEN=<YOUR_MEMORABLE_WORD_HERE>
 
 # App Secret for decoding client signed messages
-APP_SECRET=870dda27966de0e912b75f601976181a
+#APP_SECRET=870dda27966de0e912b75f601976181a
+APP_SECRET=877eab862ee276b726f25ef47e3bd035
 
 # Page access token for sending bot messages
 PAGE_ACCESS_TOKEN=
